adding video commit

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		<!--//navigation-->
 		<!--banner-->
 		<div class="banner">
-			<div data-vide-bg="video/marriage">
+			<div data-vide-bg="video/marriage" data-vide-options="loop: false, muted: false">
 				<div class="center-container">
 					<div class="banner-text">
 						<div id="top" class="callbacks_container">
