changes for family

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 <html lang="zxx">
 
 <head>
-	<title>Wedding Ceremony a Wedding Category Bootstrap responsive Web Template | Home :: w3layouts</title>
+	<title>Anurag ki Mohini</title>
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Wedding Ceremony web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"
-	/>
+	<meta name="keywords" content=""/>
 	<script type="application/x-javascript">
 		addEventListener("load", function () {
 			setTimeout(hideURLbar, 0);
@@ -47,15 +46,15 @@
 			<div class="header-top-agile">
 				<div class="social-icons-agileits">
 					<ul>
-						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> <a href="mailto:info@example.com">info@example.com</a></li>
-						<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> +141 587 426 825</li>
+						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> <a href="mailto:info@example.com">anuragrawat21@gmail.com</a></li>
+						<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> +91-9686884151</li>
 					</ul>
 				</div>
 				<div class="social">
 					<ul>
 						<li><a href="#" class="link facebook" target="_parent"><span class="fa fa-facebook-square"></span></a></li>
 						<li><a href="#" class="link twitter" target="_parent"><span class="fa fa-twitter"></span></a></li>
-						<li><a href="#" class="link google-plus" target="_parent"><span class="fa fa-google-plus-square"></span></a></li>
+						<!-- <li><a href="#" class="link google-plus" target="_parent"><span class="fa fa-google-plus-square"></span></a></li> -->
 					</ul>
 				</div>
 				<div class="clearfix"></div>
@@ -70,7 +69,7 @@
 					<span class="icon-bar"></span>
 				</button>
 						<div class="logo-agileinfo">
-							<h1><a href="index.html">wc</a></h1>
+							<h1><a href="index.html">AM</a></h1>
 						</div>
 
 						<div id="navbar" class="navbar-collapse navbar-right collapse hover-effect">
@@ -85,12 +84,11 @@
 						</div>
 					</nav>
 				</div>
-				<div class="w3ls_search">
+				<!-- <div class="w3ls_search">
 					<div class="cd-main-header">
 						<ul class="cd-header-buttons">
 							<li><a class="cd-search-trigger" href="#cd-search"> <span></span></a></li>
 						</ul>
-						<!-- cd-header-buttons -->
 					</div>
 					<div id="cd-search" class="cd-search">
 						<form action="#" method="post">
@@ -99,12 +97,12 @@
 					</div>
 				</div>
 				<div class="clearfix"></div>
-			</div>
+			</div> -->
 		</div>
 		<!--//navigation-->
 		<!--banner-->
 		<div class="banner">
-			<div data-vide-bg="video/marriage" data-vide-options="loop: false, muted: false">
+			<div data-vide-bg="video/marriage" data-vide-options="loop: false, muted: true">
 				<div class="center-container">
 					<div class="banner-text">
 						<div id="top" class="callbacks_container">
@@ -162,14 +160,14 @@
 				<div class="col-md-2 team-grid">
 					<!-- normal -->
 					<div class="info">
-						<h3>Smith</h3>
+						<h3>Anurag</h3>
 						<div class="arrow-container animated fadeInDown">
 							<a href="#home" class="arrow-2 scroll">
 							<i class="fa fa-heart-o" aria-hidden="true"></i>
 						</a>
 							<div class="arrow-1 animated hinge infinite zoomIn"></div>
 						</div>
-						<h4>Rosee</h4>
+						<h4>Mohini</h4>
 					</div>
 				</div>
 				<div class="col-md-5 team-grid">
@@ -345,14 +343,13 @@
 					<div class="agile-news-right">
 						<div class="date-grid">
 							<div class="time">
-								<p><i class="fa fa-calendar" aria-hidden="true"></i> June 12,2017</p>
+								<p><i class="fa fa-calendar" aria-hidden="true"></i> February 10,2018</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
 						<div class="w3-agile-news-info">
-							<a href="#" data-toggle="modal" data-target="#myModal1">Aenean id lorem efficitur, porttitor eros dapibus</a>
-							<p>Phasellus vestibulum velit sed nisi ultricies scelerisque. Vivamus ligula mauris, euismod in dictum id, tempus ac
-								odio. Etiam tristique felis eros, tincidunt interdum elit gravida et.</p>
+							<a href="#" data-toggle="modal" data-target="#myModal1">Mehendi</a>
+							<p>Wo Jo Sar Jhuka Ke Baithe Hain Hamara Dil Churaye Baithe Hain Humne Unse Kaha Hamara Dil Hume Lauta Do To Bole Hum To Hatho Mein Mehendi Laga Ke Baithe Hain</p>
 						</div>
 						<div class="w3l-button">
 							<a href="#" data-toggle="modal" data-target="#myModal1">More</a>
@@ -363,12 +360,12 @@
 					<div class="agile-news-right w3l-newsw">
 						<div class="date-grid">
 							<div class="time">
-								<p><i class="fa fa-calendar" aria-hidden="true"></i> June 13,2017</p>
+								<p><i class="fa fa-calendar" aria-hidden="true"></i> February 11,2018</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
 						<div class="w3-agile-news-info">
-							<a href="#" data-toggle="modal" data-target="#myModal2">Aenean id lorem efficitur, porttitor eros dapibus</a>
+							<a href="#" data-toggle="modal" data-target="#myModal2">Haldi</a>
 							<p>Phasellus vestibulum velit sed nisi ultricies scelerisque. Vivamus ligula mauris, euismod in dictum id, tempus ac
 								odio. Etiam tristique felis eros, tincidunt interdum elit gravida et.</p>
 						</div>
@@ -383,12 +380,72 @@
 					<div class="agile-news-right">
 						<div class="date-grid">
 							<div class="time">
-								<p><i class="fa fa-calendar" aria-hidden="true"></i> July 14,2017</p>
+								<p><i class="fa fa-calendar" aria-hidden="true"></i> February 11,2018</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
 						<div class="w3-agile-news-info">
-							<a href="#" data-toggle="modal" data-target="#myModal3">Aenean id lorem efficitur, porttitor eros dapibus</a>
+							<a href="#" data-toggle="modal" data-target="#myModal3">Tilak</a>
+							<p>Phasellus vestibulum velit sed nisi ultricies scelerisque. Vivamus ligula mauris, euismod in dictum id, tempus ac
+								odio. Etiam tristique felis eros, tincidunt interdum elit gravida et.</p>
+						</div>
+						<div class="w3l-button">
+							<a href="#" data-toggle="modal" data-target="#myModal3">More</a>
+						</div>
+					</div>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="wthree-news-grids">
+				<div class="col-md-4 agile-news-left">
+					<img src="images/n1.jpg" alt="">
+					<div class="agile-news-right">
+						<div class="date-grid">
+							<div class="time">
+								<p><i class="fa fa-calendar" aria-hidden="true"></i> February 11,2018</p>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+						<div class="w3-agile-news-info">
+							<a href="#" data-toggle="modal" data-target="#myModal1">Sagai & Sangeet</a>
+							<p>Phasellus vestibulum velit sed nisi ultricies scelerisque. Vivamus ligula mauris, euismod in dictum id, tempus ac
+								odio. Etiam tristique felis eros, tincidunt interdum elit gravida et.</p>
+						</div>
+						<div class="w3l-button">
+							<a href="#" data-toggle="modal" data-target="#myModal1">More</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 agile-news-left">
+					<div class="agile-news-right w3l-newsw">
+						<div class="date-grid">
+							<div class="time">
+								<p><i class="fa fa-calendar" aria-hidden="true"></i> February 12,2018</p>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+						<div class="w3-agile-news-info">
+							<a href="#" data-toggle="modal" data-target="#myModal2">Barat</a>
+							<p>Phasellus vestibulum velit sed nisi ultricies scelerisque. Vivamus ligula mauris, euismod in dictum id, tempus ac
+								odio. Etiam tristique felis eros, tincidunt interdum elit gravida et.</p>
+						</div>
+						<div class="w3l-button">
+							<a href="#" data-toggle="modal" data-target="#myModal2">More</a>
+						</div>
+					</div>
+					<img src="images/n2.jpg" alt="">
+				</div>
+				<div class="col-md-4 agile-news-left">
+					<img src="images/n3.jpg" alt="">
+					<div class="agile-news-right">
+						<div class="date-grid">
+							<div class="time">
+								<p><i class="fa fa-calendar" aria-hidden="true"></i> February 12,2018</p>
+							</div>
+							<div class="clearfix"> </div>
+						</div>
+						<div class="w3-agile-news-info">
+							<a href="#" data-toggle="modal" data-target="#myModal3">Shaadi</a>
 							<p>Phasellus vestibulum velit sed nisi ultricies scelerisque. Vivamus ligula mauris, euismod in dictum id, tempus ac
 								odio. Etiam tristique felis eros, tincidunt interdum elit gravida et.</p>
 						</div>
@@ -548,7 +605,7 @@
 	<!-- team -->
 	<div class="team" id="team">
 		<div class="container">
-			<h3 class="wthree_title_agile"><span>O</span>ur <span>P</span>lanners</h3>
+			<h3 class="wthree_title_agile"><span>B</span>ride <span>F</span>amily</h3>
 			<div class="agile_team_grids">
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
@@ -564,8 +621,8 @@
 						</div>
 					</div>
 					<div class="agile_team_grid1">
-						<h3>Kane Doe</h3>
-						<p>Nam id urna ipsum</p>
+						<h3>R. K. Gour</h3>
+						<p>Father</p>
 					</div>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
@@ -582,8 +639,8 @@
 						</div>
 					</div>
 					<div class="agile_team_grid1">
-						<h3>Mdaline</h3>
-						<p>Nam id urna ipsum</p>
+						<h3>Rajni Gour</h3>
+						<p>Mother</p>
 					</div>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
@@ -600,8 +657,8 @@
 						</div>
 					</div>
 					<div class="agile_team_grid1">
-						<h3>Laura Crisp</h3>
-						<p>Nam id urna ipsum</p>
+						<h3>Mohini Gour</h3>
+						<p>Bride</p>
 					</div>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
@@ -618,13 +675,96 @@
 						</div>
 					</div>
 					<div class="agile_team_grid1">
-						<h3>Rosy Paul</h3>
-						<p>Nam id urna ipsum</p>
+						<h3>Jaya Gour</h3>
+						<p>Sister</p>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 		</div>
+
+	</div>
+
+	<div class="team" id="team">
+		<div class="container">
+			<h3 class="wthree_title_agile"><span>G</span>room <span>F</span>amily</h3>
+			<div class="agile_team_grids">
+				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
+					<div class="agile_team_grid_main">
+						<img src="images/t1.jpg" alt=" " class="img-responsive" />
+						<div class="p-mask">
+							<ul class="social-icons">
+								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+								<li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
+
+								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li>
+
+							</ul>
+						</div>
+					</div>
+					<div class="agile_team_grid1">
+						<h3>Vinod Rawat</h3>
+						<p>Father</p>
+					</div>
+				</div>
+				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
+					<div class="agile_team_grid_main">
+						<img src="images/t2.jpg" alt=" " class="img-responsive" />
+						<div class="p-mask">
+							<ul class="social-icons">
+								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+								<li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
+
+								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li>
+
+							</ul>
+						</div>
+					</div>
+					<div class="agile_team_grid1">
+						<h3>Vandana Rawat</h3>
+						<p>Mother</p>
+					</div>
+				</div>
+				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
+					<div class="agile_team_grid_main">
+						<img src="images/t3.jpg" alt=" " class="img-responsive" />
+						<div class="p-mask">
+							<ul class="social-icons">
+								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+								<li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
+
+								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li>
+
+							</ul>
+						</div>
+					</div>
+					<div class="agile_team_grid1">
+						<h3>Anurag Rawat</h3>
+						<p>Groom</p>
+					</div>
+				</div>
+				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
+					<div class="agile_team_grid_main">
+						<img src="images/t4.jpg" alt=" " class="img-responsive" />
+						<div class="p-mask">
+							<ul class="social-icons">
+								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+								<li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
+
+								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li>
+
+							</ul>
+						</div>
+					</div>
+					<div class="agile_team_grid1">
+						<h3>Shreya Rawat</h3>
+						<p>Sister</p>
+					</div>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+		</div>
+		
 	</div>
 	<!-- //team -->
 	<!--/counter-->
@@ -641,25 +781,25 @@
 	<div class="contact-w3l" id="contact">
 		<h3 class="wthree_title_agile"><span>C</span>ontact</h3>
 		<div class="container">
-			<div class="col-md-6 contact-agileits-w3layouts">
+			<div class="col-md-12 contact-agileits-w3layouts">
 				<div id="horizontalTab">
 					<ul class="resp-tabs-list">
 						<li>
-							<h6>New Jersey</h6>
+							<h6>Itarsi</h6>
 						</li>
-						<li>
+						<!-- <li>
 							<h6>Canada</h6>
 						</li>
 						<li>
 							<h6>UK</h6>
-						</li>
+						</li> -->
 					</ul>
 					<div class="resp-tabs-container">
 
 						<div class="tab2">
-							<p class="para-agileits-w3layouts"><i class="fa fa-map-marker" aria-hidden="true"></i>25095 Blue Ravine Rd, Folsom, CA 95630, USA</p>
-							<p class="para-agileits-w3layouts"><i class="fa fa-phone" aria-hidden="true"></i>032 625 4592</p>
-							<p class="para-agileits-w3layouts"><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:mail@example.com">info@example.com</a></p>
+							<p class="para-agileits-w3layouts"><i class="fa fa-map-marker" aria-hidden="true"></i>Sai Krishna Resort, Itarsi, Distt - Hoshangabad, Madhya Pradesh</p>
+							<p class="para-agileits-w3layouts"><i class="fa fa-phone" aria-hidden="true"></i>+91-9686884151, +91-9752338420</p>
+							<p class="para-agileits-w3layouts"><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:mail@example.com">anuragrawat21@gmail.com</a></p>
 							<div class="agileits-social">
 								<ul>
 									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -705,7 +845,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 regstr-r-w3-agileits">
+			<!-- <div class="col-md-6 regstr-r-w3-agileits">
 				<div class="form-bg-w3ls">
 					<h3 class="subhead-agileits white-w3ls">Get in Touch</h3>
 					<form action="#" method="post">
@@ -716,7 +856,7 @@
 						<input type="submit" value="Submit" class="button-w3layouts hvr-rectangle-out">
 					</form>
 				</div>
-			</div>
+			</div> -->
 			<div class="clearfix"></div>
 		</div>
 	</div>
