some images and tex adding

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html lang="zxx">
 
 <head>
-	<title>Anurag ki Mohini</title>
+	<title>Anuraghini</title>
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -69,7 +69,7 @@
 					<span class="icon-bar"></span>
 				</button>
 						<div class="logo-agileinfo">
-							<h1><a href="index.html">AM</a></h1>
+							<h1><a href="index.html">Anuraghini</a></h1>
 						</div>
 
 						<div id="navbar" class="navbar-collapse navbar-right collapse hover-effect">
@@ -78,7 +78,7 @@
 								<li><a href="#about" data-hover="About Us" class="scroll">About Us</a></li>
 								<li><a href="#events" data-hover="Events" class="scroll">Events</a></li>
 								<li><a href="#gallery" data-hover="Gallery" class="scroll">Gallery</a></li>
-								<li><a href="#team" data-hover="Planners" class="scroll">Planners</a></li>
+								<li><a href="#team" data-hover="Planners" class="scroll">Family</a></li>
 								<li><a href="#contact" data-hover="Contact Us" class="scroll">Contact Us</a></li>
 							</ul>
 						</div>
@@ -339,7 +339,7 @@
 			<h3 class="wthree_title_agile"><span>L</span>atest <span>E</span>vents</h3>
 			<div class="wthree-news-grids">
 				<div class="col-md-4 agile-news-left">
-					<img src="images/n1.jpg" alt="">
+					<img src="images/mehndi.jpg" alt="">
 					<div class="agile-news-right">
 						<div class="date-grid">
 							<div class="time">
@@ -349,7 +349,7 @@
 						</div>
 						<div class="w3-agile-news-info">
 							<a href="#" data-toggle="modal" data-target="#myModal1">Mehendi</a>
-							<p>Wo Jo Sar Jhuka Ke Baithe Hain Hamara Dil Churaye Baithe Hain Humne Unse Kaha Hamara Dil Hume Lauta Do To Bole Hum To Hatho Mein Mehendi Laga Ke Baithe Hain</p>
+							<p>Aao Mehendi Lagayen, Hatheli Rangayen <b>Anurag</b> Ke Liye <b>Mohini</b> ko Sajayen.</p>
 						</div>
 						<div class="w3l-button">
 							<a href="#" data-toggle="modal" data-target="#myModal1">More</a>
@@ -366,17 +366,16 @@
 						</div>
 						<div class="w3-agile-news-info">
 							<a href="#" data-toggle="modal" data-target="#myModal2">Haldi</a>
-							<p>Phasellus vestibulum velit sed nisi ultricies scelerisque. Vivamus ligula mauris, euismod in dictum id, tempus ac
-								odio. Etiam tristique felis eros, tincidunt interdum elit gravida et.</p>
+							<p>The intensity of a bride's haldi is determined by the groom's affection for her. The brighter the haldi, the deeper his love for her. so come and join us for the Haldi Ceremony</p>
 						</div>
 						<div class="w3l-button">
 							<a href="#" data-toggle="modal" data-target="#myModal2">More</a>
 						</div>
 					</div>
-					<img src="images/n2.jpg" alt="">
+					<img src="images/Haldi-Ceremony.jpg" alt="">
 				</div>
 				<div class="col-md-4 agile-news-left">
-					<img src="images/n3.jpg" alt="">
+					<img src="images/tilak.jpg" alt="">
 					<div class="agile-news-right">
 						<div class="date-grid">
 							<div class="time">
@@ -398,7 +397,7 @@
 			</div>
 			<div class="wthree-news-grids">
 				<div class="col-md-4 agile-news-left">
-					<img src="images/n1.jpg" alt="">
+					<img src="images/Sagai-Rings.jpg" alt="">
 					<div class="agile-news-right">
 						<div class="date-grid">
 							<div class="time">
@@ -408,8 +407,7 @@
 						</div>
 						<div class="w3-agile-news-info">
 							<a href="#" data-toggle="modal" data-target="#myModal1">Sagai & Sangeet</a>
-							<p>Phasellus vestibulum velit sed nisi ultricies scelerisque. Vivamus ligula mauris, euismod in dictum id, tempus ac
-								odio. Etiam tristique felis eros, tincidunt interdum elit gravida et.</p>
+							<p>Yaaro Aao Jhoome Naache Aur Gaayen <b>Mohini</b> Aur <b>Anurag</b> Sang Dhoom Machaayen Aaj Hum Sab Milke Iss Sangeet Ki Shaam Ko, Aur Rangeen Banaayen.</p>
 						</div>
 						<div class="w3l-button">
 							<a href="#" data-toggle="modal" data-target="#myModal1">More</a>
@@ -426,17 +424,16 @@
 						</div>
 						<div class="w3-agile-news-info">
 							<a href="#" data-toggle="modal" data-target="#myModal2">Barat</a>
-							<p>Phasellus vestibulum velit sed nisi ultricies scelerisque. Vivamus ligula mauris, euismod in dictum id, tempus ac
-								odio. Etiam tristique felis eros, tincidunt interdum elit gravida et.</p>
+							<p>Marriages are settled in Heaven and celebrated on Earth The Milan of two unknown souls, written right from Birth.</p>
 						</div>
 						<div class="w3l-button">
 							<a href="#" data-toggle="modal" data-target="#myModal2">More</a>
 						</div>
 					</div>
-					<img src="images/n2.jpg" alt="">
+					<img src="images/Baraat.jpg" alt="">
 				</div>
 				<div class="col-md-4 agile-news-left">
-					<img src="images/n3.jpg" alt="">
+					<img src="images/wedding.jpg" alt="">
 					<div class="agile-news-right">
 						<div class="date-grid">
 							<div class="time">
@@ -445,9 +442,9 @@
 							<div class="clearfix"> </div>
 						</div>
 						<div class="w3-agile-news-info">
-							<a href="#" data-toggle="modal" data-target="#myModal3">Shaadi</a>
-							<p>Phasellus vestibulum velit sed nisi ultricies scelerisque. Vivamus ligula mauris, euismod in dictum id, tempus ac
-								odio. Etiam tristique felis eros, tincidunt interdum elit gravida et.</p>
+							<a href="#" data-toggle="modal" data-target="#myModal3">Wedding</a>
+							<p>Two souls bind themselves together with the eternal bond of love,
+honesty and compassion.</p>
 						</div>
 						<div class="w3l-button">
 							<a href="#" data-toggle="modal" data-target="#myModal3">More</a>
@@ -615,7 +612,7 @@
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 								<li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
 
-								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li>
+								<!-- <li><a href="#"><i class="fa fa-dribbble"></i></a> </li> -->
 
 							</ul>
 						</div>
@@ -771,7 +768,8 @@
 	<div class="agileinfo_counter_section">
 		<div class="container">
 			<h3>Wedding Ceremony</h3>
-			<p class="sub_para two">consectetur adipiscing elit, sed do eiusmod</p>
+			<p class="sub_para two">February 12 2018, Sai Krishna Resort, Itarsi, Madhya Pradesh</p>
+			<p class="sub_para two">Every love story is beautiful but ours is my favorite.</p>
 			<h5><a href="#contact" class="view rew3 scroll"><span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>Contact Us</a></h5>
 		</div>
 	</div>
@@ -804,15 +802,14 @@
 								<ul>
 									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-rss"></i></a></li>
-									<li><a href="#"><i class="fa fa-vk"></i></a></li>
+									<!-- <li><a href="#"><i class="fa fa-rss"></i></a></li>
+									<li><a href="#"><i class="fa fa-vk"></i></a></li> -->
 								</ul>
 							</div>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1859251.8642025779!2d-76.08274894689792!3d40.06224332601239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c0fb959e00409f%3A0x2cd27b07f83f6d8d!2sNew+Jersey%2C+USA!5e0!3m2!1sen!2sin!4v1474436926209"
-							    allowfullscreen></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3682.677253424406!2d77.77344251433686!3d22.628524336619677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397ddb624a97ad3d%3A0x606ca7cf0836ba9f!2sSAI+KRISHNA+RESORT+GARDEN!5e0!3m2!1sen!2sin!4v1513070300097" allowfullscreen></iframe>
 
 						</div>
-						<div class="tab3">
+						<!-- <div class="tab3">
 							<p class="para-agileits-w3layouts"><i class="fa fa-map-marker" aria-hidden="true"></i>123 San Sebastian, New York City USA.</p>
 							<p class="para-agileits-w3layouts"><i class="fa fa-phone" aria-hidden="true"></i>333 222 3333</p>
 							<p class="para-agileits-w3layouts"><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:mail@example.com">info@example.com</a></p>
@@ -841,7 +838,7 @@
 							</div>
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26370863.006641828!2d-113.70834778640587!3d36.212776709411365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited+States!5e0!3m2!1sen!2sin!4v1497420724957"
 							    allowfullscreen></iframe>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -865,10 +862,10 @@
 	<div class="footer-w3layouts">
 		<div class="container">
 			<div class="agile-logo">
-				<a href="index.html">WC</a>
+				<a href="index.html">Anuraghini</a>
 			</div>
 			<div class="agile-copy">
-				<p>© 2017 Wedding Ceremony. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+				<p>© 2018 Anuraghini.</p>
 			</div>
 			<div class="clearfix"></div>
 		</div>
