--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="we-po-head">
+			<!-- <div class="we-po-head">
 				<img src="images/m1.png" alt=" ">
-			</div>
+			</div> -->
 		</div>
 		<!--//banner-->
 	</div>
