--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!--
-	Author: W3layouts
-	Author URL: http://w3layouts.com
-	License: Creative Commons Attribution 3.0 Unported
-	License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -75,9 +70,9 @@
 						<div id="navbar" class="navbar-collapse navbar-right collapse hover-effect">
 							<ul class="nav navbar-nav">
 								<li class="active"><a href="index.html" data-hover="Home">Home</a></li>
-								<li><a href="#about" data-hover="About Us" class="scroll">About Us</a></li>
-								<li><a href="#events" data-hover="Events" class="scroll">Events</a></li>
-								<li><a href="#gallery" data-hover="Gallery" class="scroll">Gallery</a></li>
+								<li><a href="#about" data-hover="Our Story" class="scroll">Our Story</a></li>
+								<li><a href="#events" data-hover="Functions" class="scroll">Functions</a></li>
+								<li><a href="#gallery" data-hover="Memory" class="scroll">Memory</a></li>
 								<li><a href="#team" data-hover="Family" class="scroll">Family</a></li>
 								<li><a href="#contact" data-hover="Contact Us" class="scroll">Contact Us</a></li>
 							</ul>
@@ -102,11 +97,12 @@
 		<!--//navigation-->
 		<!--banner-->
 		<div class="banner">
-			<div data-vide-bg="video/marriage" data-vide-options="loop: false, muted: true">
+			<!-- <div data-vide-bg="video/marriage" data-vide-options="loop: false, muted: true"> -->
+			<div>
 				<div class="center-container">
 					<div class="banner-text">
 						<div id="top" class="callbacks_container">
-							<ul class="rslides" id="slider3">
+							<!-- <ul class="rslides" id="slider3">
 								<li>
 									<div class="banner-text-info">
 										<h3 class="bnr-title">Our Wedding!</h3>
@@ -125,8 +121,38 @@
 										<p>Express your love in the most special way </p>
 									</div>
 								</li>
-							</ul>
+							</ul> -->
+							<div class="mySlides faded">
+  <div class="numbertext">1 / 3</div>
+  <img src="images/slider1.jpg" style="width:100%">
+  <!-- <div class="text">Caption Text</div> -->
+</div>
+
+<div class="mySlides faded">
+  <div class="numbertext">2 / 3</div>
+  <img src="images/slider2.jpg" style="width:100%">
+  <!-- <div class="text">Caption Two</div> -->
+</div>
+
+<div class="mySlides faded">
+  <div class="numbertext">3 / 3</div>
+  <img src="images/slider1.jpg" style="width:100%">
+  <!-- <div class="text">Caption Three</div> -->
+</div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
+<br>
 						</div>
+						
+						
 					</div>
 				</div>
 			</div>
@@ -652,7 +678,7 @@ honesty and compassion.</span>
 			<div class="agile_team_grids">
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
-						<img src="images/n1.jpg" alt=" " class="img-responsive" />
+						<img src="images/an1.jpg" alt=" " class="img-responsive" />
 						<!-- <div class="p-mask">
 							<ul class="social-icons">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -670,7 +696,7 @@ honesty and compassion.</span>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
-						<img src="images/n1.jpg" alt=" " class="img-responsive" />
+						<img src="images/an2.jpg" alt=" " class="img-responsive" />
 						<!-- <div class="p-mask">
 							<ul class="social-icons">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -688,7 +714,7 @@ honesty and compassion.</span>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
-						<img src="images/n1.jpg" alt=" " class="img-responsive" />
+						<img src="images/an1.jpg" alt=" " class="img-responsive" />
 						<div class="p-mask">
 							<ul class="social-icons">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -705,7 +731,7 @@ honesty and compassion.</span>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
-						<img src="images/n1.jpg" alt=" " class="img-responsive" />
+						<img src="images/an1.jpg" alt=" " class="img-responsive" />
 						<div class="p-mask">
 							<ul class="social-icons">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -723,7 +749,7 @@ honesty and compassion.</span>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
-						<img src="images/n1.jpg" alt=" " class="img-responsive" />
+						<img src="images/an1.jpg" alt=" " class="img-responsive" />
 						<div class="p-mask">
 							<ul class="social-icons">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -735,13 +761,13 @@ honesty and compassion.</span>
 						</div>
 					</div>
 					<div class="agile_team_grid1">
-						<h3>Shreya Rawat</h3>
-						<p>Sister</p>
+						<h3>Pramod Choudhary</h3>
+						<p>Brother-In-Law</p>
 					</div>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
-						<img src="images/n1.jpg" alt=" " class="img-responsive" />
+						<img src="images/an1.jpg" alt=" " class="img-responsive" />
 						<div class="p-mask">
 							<ul class="social-icons">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -753,13 +779,13 @@ honesty and compassion.</span>
 						</div>
 					</div>
 					<div class="agile_team_grid1">
-						<h3>Shreya Rawat</h3>
+						<h3>Neetu Choudhary</h3>
 						<p>Sister</p>
 					</div>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
-						<img src="images/n1.jpg" alt=" " class="img-responsive" />
+						<img src="images/an1.jpg" alt=" " class="img-responsive" />
 						<div class="p-mask">
 							<ul class="social-icons">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -1083,9 +1109,131 @@ honesty and compassion.</span>
 	<!-- smooth scrolling -->
 	<script src="js/SmoothScroll.min.js"></script>
 	<!-- //smooth scrolling -->
+	<script>
+var slideIndex = 1;
+showSlides(slideIndex);
 
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
 
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
 
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" actives", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " actives";
+}
+</script>
 </body>
+<style>
+* {box-sizing: border-box}
+/*body {font-family: Verdana, sans-serif; margin:0}*/
+.mySlides {display: none}
+img {vertical-align: middle;}
 
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.actives, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.faded {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+</style>
 </html>
