--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
 			<div class="header-top-agile">
 				<div class="social-icons-agileits">
 					<ul>
-						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> <a href="mailto:info@example.com">anuragrawat21@gmail.com</a></li>
+						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> <a href="mailto:anuragrawat21@gmail.com">anuragrawat21@gmail.com</a></li>
+						<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> <a href="mailto:mohini.gour@gmail.com">mohini.gour@gmail.com</a></li>
 						<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> +91-9686884151</li>
 					</ul>
 				</div>
 				<div class="social">
 					<ul>
-						<li><a href="#" class="link facebook" target="_parent"><span class="fa fa-facebook-square"></span></a></li>
-						<li><a href="#" class="link twitter" target="_parent"><span class="fa fa-twitter"></span></a></li>
+						<li><a href="https://www.facebook.com/a266311" class="link facebook" target="_blank"><span class="fa fa-facebook-square"></span></a></li>
+						<!-- <li><a href="#" class="link twitter" target="_parent"><span class="fa fa-twitter"></span></a></li> -->
 						<!-- <li><a href="#" class="link google-plus" target="_parent"><span class="fa fa-google-plus-square"></span></a></li> -->
 					</ul>
 				</div>
@@ -170,9 +171,9 @@
 					<p></p>
 					<div class="icons">
 						<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.facebook.com/a266311" target="_blank"><i class="fa fa-facebook"></i></a></li>
 							<!-- <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li> -->
-							<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+							<!-- <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -198,9 +199,9 @@
 					<p></p>
 					<div class="icons">
 						<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.facebook.com/mohini.gour.1" target="_blank"><i class="fa fa-facebook"></i></a></li>
 							<!-- <li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li> -->
-							<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+							<!-- <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -267,7 +268,7 @@
 	<!-- news -->
 	<div class="news" id="events">
 		<div class="container">
-			<h3 class="wthree_title_agile"><span>W</span>edding <span>F</span>uncations</h3>
+			<h3 class="wthree_title_agile"><span>W</span>edding <span>F</span>unctions</h3>
 			<div class="wthree-news-grids">
 				<div class="col-md-4 agile-news-left">
 					<img src="images/mehndi.jpg" alt="">
@@ -316,8 +317,7 @@
 						</div>
 						<div class="w3-agile-news-info">
 							<a href="#" data-toggle="modal" data-target="#myModal3">Tilak</a>
-							<p>Phasellus vestibulum velit sed nisi ultricies scelerisque. Vivamus ligula mauris, euismod in dictum id, tempus ac
-								odio. Etiam tristique felis eros, tincidunt interdum elit gravida et.</p>
+							<p>Marriage is the golden ring in a chain whose beginning is a glance and whose ending is Eternity.</p>
 						</div>
 						<div class="w3l-button">
 							<a href="#" data-toggle="modal" data-target="#myModal3">More</a>
@@ -423,9 +423,9 @@ honesty and compassion.</p>
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal">&times;</button>
-					<h4>Latest Event</h4>
+					<h4>Tilak</h4>
 					<img src="images/tilak.jpg" alt="blog-image" />
-					<span>Lorem ipsum dolor sit amet, Sed ut perspiciatis unde omnis iste natus error sit voluptatem , eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.accusantium doloremque laudantium, totam rem aperiamconsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+					<span>Marriage is the golden ring in a chain whose beginning is a glance and whose ending is Eternity.</span>
 				</div>
 			</div>
 		</div>
@@ -707,10 +707,10 @@ honesty and compassion.</span>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
-						<img src="images/an1.jpg" alt=" " class="img-responsive" />
+						<img src="images/an3.jpg" alt=" " class="img-responsive" />
 						<div class="p-mask">
 							<ul class="social-icons">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://www.facebook.com/a266311" target="_blank"><i class="fa fa-facebook"></i></a></li>
 								<!-- <li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
 								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li> -->
 
@@ -724,16 +724,16 @@ honesty and compassion.</span>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
-						<img src="images/an1.jpg" alt=" " class="img-responsive" />
-						<div class="p-mask">
+						<img src="images/an4.jpg" alt=" " class="img-responsive" />
+						<!-- <div class="p-mask">
 							<ul class="social-icons">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<!-- <li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
+								<li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
 
-								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li> -->
+								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li>
 
 							</ul>
-						</div>
+						</div> -->
 					</div>
 					<div class="agile_team_grid1">
 						<h3>Shreya Rawat</h3>
@@ -742,8 +742,8 @@ honesty and compassion.</span>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
-						<img src="images/an1.jpg" alt=" " class="img-responsive" />
-						<div class="p-mask">
+						<img src="images/an5.jpg" alt=" " class="img-responsive" />
+						<!-- <div class="p-mask">
 							<ul class="social-icons">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 								<li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
@@ -751,7 +751,7 @@ honesty and compassion.</span>
 								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li>
 
 							</ul>
-						</div>
+						</div> -->
 					</div>
 					<div class="agile_team_grid1">
 						<h3>Pramod Choudhary</h3>
@@ -760,8 +760,8 @@ honesty and compassion.</span>
 				</div>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
-						<img src="images/an1.jpg" alt=" " class="img-responsive" />
-						<div class="p-mask">
+						<img src="images/an6.jpg" alt=" " class="img-responsive" />
+						<!-- <div class="p-mask">
 							<ul class="social-icons">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 								<li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
@@ -769,7 +769,7 @@ honesty and compassion.</span>
 								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li>
 
 							</ul>
-						</div>
+						</div> -->
 					</div>
 					<div class="agile_team_grid1">
 						<h3>Neetu Choudhary</h3>
@@ -779,7 +779,7 @@ honesty and compassion.</span>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
 						<img src="images/an1.jpg" alt=" " class="img-responsive" />
-						<div class="p-mask">
+						<!-- <div class="p-mask">
 							<ul class="social-icons">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 								<li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
@@ -787,7 +787,7 @@ honesty and compassion.</span>
 								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li>
 
 							</ul>
-						</div>
+						</div> -->
 					</div>
 					<div class="agile_team_grid1">
 						<h3>Agam Choudhary</h3>
@@ -841,7 +841,7 @@ honesty and compassion.</span>
 						<img src="images/t3.jpg" alt=" " class="img-responsive" />
 						<div class="p-mask">
 							<ul class="social-icons">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://www.facebook.com/mohini.gour.1" target="_blank"><i class="fa fa-facebook"></i></a></li>
 								<!-- <li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
 								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li> -->
 
@@ -856,14 +856,14 @@ honesty and compassion.</span>
 				<div class="col-md-3 agile_team_grid team-left-w3l-agile">
 					<div class="agile_team_grid_main">
 						<img src="images/t4.jpg" alt=" " class="img-responsive" />
-						<div class="p-mask">
+						<!-- <div class="p-mask">
 							<ul class="social-icons">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<!-- <li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
-								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li> -->
+								<li> <a href="#"><i class="fa fa-twitter"></i></a> </li>
+								<li><a href="#"><i class="fa fa-dribbble"></i></a> </li>
 
 							</ul>
-						</div>
+						</div> -->
 					</div>
 					<div class="agile_team_grid1">
 						<h3>Jaya Gour</h3>
@@ -909,11 +909,12 @@ honesty and compassion.</span>
 						<div class="tab2">
 							<p class="para-agileits-w3layouts"><i class="fa fa-map-marker" aria-hidden="true"></i>Sai Krishna Resort, Itarsi, Distt - Hoshangabad, Madhya Pradesh</p>
 							<p class="para-agileits-w3layouts"><i class="fa fa-phone" aria-hidden="true"></i>+91-9686884151, +91-9752338420</p>
-							<p class="para-agileits-w3layouts"><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:mail@example.com">anuragrawat21@gmail.com</a></p>
+							<p class="para-agileits-w3layouts"><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:anuragrawat21@gmail.com">anuragrawat21@gmail.com </a>
+							<i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:mohini.gour@gmail.com">mohini.gour@gmail.com</a></p>
 							<div class="agileits-social">
 								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="https://www.facebook.com/a266311" target="_blank"><i class="fa fa-facebook"></i></a></li>
+									<!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
 									<!-- <li><a href="#"><i class="fa fa-rss"></i></a></li>
 									<li><a href="#"><i class="fa fa-vk"></i></a></li> -->
 								</ul>
