adding replica page for others

--- a/anuraghini_invitation.html
+++ b/anuraghini_invitation.html
@@ -215,7 +215,7 @@
 					<div id="owl-demo" class="owl-carousel">
 						<div class="item-owl">
 							<div class="test-review">
-								<img src="images/s10.jpg" alt="" />
+								<img src="images/s2.jpg" alt="" />
 							</div>
 						</div>
 						<div class="item-owl">
@@ -223,14 +223,14 @@
 								<img src="images/s1.jpg" alt="" />
 							</div>
 						</div>
-						<!-- <div class="item-owl">
+						<div class="item-owl">
 							<div class="test-review">
 								<img src="images/s3.jpg" alt="" />
 							</div>
-						</div> -->
+						</div>
 						<div class="item-owl">
 							<div class="test-review">
-								<img src="images/s9.jpg" alt="" />
+								<img src="images/s7.jpg" alt="" />
 							</div>
 						</div>
 						<div class="item-owl">
@@ -243,11 +243,11 @@
 								<img src="images/s8.jpg" alt="" />
 							</div>
 						</div>
-						<!-- <div class="item-owl">
+						<div class="item-owl">
 							<div class="test-review">
 								<img src="images/s6.jpg" alt="" />
 							</div>
-						</div> -->
+						</div>
 						<div class="item-owl">
 							<div class="test-review">
 								<img src="images/s4.jpg" alt="" />
@@ -516,7 +516,28 @@ honesty and compassion.</span>
 					</a>
 					</div>
 				</div>
-			
+				<div class="col-sm-3 col-xs-4 gallery-grids">
+					<div class="w3ls-hover">
+						<a href="images/g3.jpg" data-lightbox="example-set" data-title="">
+						<img src="images/g3.jpg" class="img-responsive zoom-img" alt=""/>
+						<div class="view-caption">
+							<h5>Wedding Ceremony</h5>
+							<span class="fa fa-heart"></span>
+						</div>
+					</a>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-4 gallery-grids">
+					<div class="w3ls-hover">
+						<a href="images/g5.jpg" data-lightbox="example-set" data-title="">
+						<img src="images/g5.jpg" class="img-responsive zoom-img" alt=""/>
+						<div class="view-caption">
+							<h5>Wedding Ceremony</h5>
+							<span class="fa fa-heart"></span>
+						</div>
+					</a>
+					</div>
+				</div>
 				<div class="col-sm-3 col-xs-4 gallery-grids">
 					<div class="w3ls-hover">
 						<a href="images/g6.jpg" data-lightbox="example-set" data-title="">
@@ -528,8 +549,72 @@ honesty and compassion.</span>
 					</a>
 					</div>
 				</div>
-			
-				
+				<div class="col-sm-3 col-xs-4 gallery-grids">
+					<div class="w3ls-hover">
+						<a href="images/g7.jpg" data-lightbox="example-set" data-title="">
+						<img src="images/g7.jpg" class="img-responsive zoom-img" alt=""/>
+						<div class="view-caption">
+							<h5>Wedding Ceremony</h5>
+							<span class="fa fa-heart"></span>
+						</div>
+					</a>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-4 gallery-grids">
+					<div class="w3ls-hover">
+						<a href="images/g8.jpg" data-lightbox="example-set" data-title="">
+						<img src="images/g8.jpg" class="img-responsive zoom-img" alt=""/>
+						<div class="view-caption">
+							<h5>Wedding Ceremony</h5>
+							<span class="fa fa-heart"></span>
+						</div>
+					</a>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-4 gallery-grids">
+					<div class="w3ls-hover">
+						<a href="images/g9.jpg" data-lightbox="example-set" data-title="">
+						<img src="images/g9.jpg" class="img-responsive zoom-img" alt=""/>
+						<div class="view-caption">
+							<h5>Wedding Ceremony</h5>
+							<span class="fa fa-heart"></span>
+						</div>
+					</a>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-4 gallery-grids">
+					<div class="w3ls-hover">
+						<a href="images/g10.jpg" data-lightbox="example-set" data-title="">
+						<img src="images/g10.jpg" class="img-responsive zoom-img" alt=""/>
+						<div class="view-caption">
+							<h5>Wedding Ceremony</h5>
+							<span class="fa fa-heart"></span>
+						</div>
+					</a>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-4 gallery-grids">
+					<div class="w3ls-hover">
+						<a href="images/g11.jpg" data-lightbox="example-set" data-title="">
+						<img src="images/g11.jpg" class="img-responsive zoom-img" alt=""/>
+						<div class="view-caption">
+							<h5>Wedding Ceremony</h5>
+							<span class="fa fa-heart"></span>
+						</div>
+					</a>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-4 gallery-grids">
+					<div class="w3ls-hover">
+						<a href="images/g12.jpg" data-lightbox="example-set" data-title="">
+						<img src="images/g12.jpg" class="img-responsive zoom-img" alt=""/>
+						<div class="view-caption">
+							<h5>Wedding Ceremony</h5>
+							<span class="fa fa-heart"></span>
+						</div>
+					</a>
+					</div>
+				</div>
 				<div class="col-sm-3 col-xs-4 gallery-grids">
 					<div class="w3ls-hover">
 						<a href="images/g13.jpg" data-lightbox="example-set" data-title="">
@@ -574,7 +659,6 @@ honesty and compassion.</span>
 					</a>
 					</div>
 				</div>
-						
 				<div class="clearfix"> </div>
 			</div>
 		</div>
