--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<!-- web fonts -->
 	<link href="//fonts.googleapis.com/css?family=Arizonia&amp;subset=latin-ext" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
+	<link rel="icon" type="image/png" href="images/favicon.png">
 	<!-- //web fonts -->
 </head>
 
