--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 						</div>
 						<div class="w3-agile-news-info">
 							<a href="#" data-toggle="modal" data-target="#myModal1">Mehendi</a>
-							<p>Aao Mehendi Lagayen, Hatheli Rangayen <b>Anurag</b> Ke Liye <b>Mohini</b> ko Sajayen.</p>
+							<p>This is the beginning of a journey that will surely lead us to an ever greater happiness</p>
 						</div>
 						<div class="w3l-button">
 							<a href="#" data-toggle="modal" data-target="#myModal1">More</a>
@@ -396,7 +396,7 @@ honesty and compassion.</p>
 					<button type="button" class="close" data-dismiss="modal">&times;</button>
 					<h4>Mehendi</h4>
 					<img src="images/mehndi.jpg" alt="blog-image" />
-					<span>Aao Mehendi Lagayen, Hatheli Rangayen <b>Anurag</b> Ke Liye <b>Mohini</b> ko Sajayen.</span>
+					<span>This is the beginning of a journey that will surely lead us to an ever greater happiness</span>
 				</div>
 			</div>
 		</div>
